lib/tests/fixtures/compiler/parser/class_capture_param.baseline
Error: class_capture_param.pp:1:12: parameter $params cannot be a capture parameter.
  class bad(*$params)
             ^~~~~~~
